First Update to README.md
Added all necessary stuff